# eraser

./: README.md
decompression/open-vcdiff/src/: vcdecoder.cc  vcdiff_main.cc
decompression/zlibdecom/: gzip.cpp
decompression/zlibdecom/zlib/: inflate.c
matching/eraser/: CMakeLists.txt  compile.sh
matching/eraser/include/: ac.h  dfa.h  eraser.h  sdch.h  twins.h  utils.h
matching/eraser/src/: ac.cpp  dfa.cpp  eraser-AC.cpp  eraser.cpp  sdch.cpp  twins.cpp  utils.cpp
matching/eraser/test/: CMakeLists.txt  eraser-AC.cpp  eraser.cpp  naive-AC.cpp  naive.cpp  sdch-AC.cpp  testDFA.cpp  twins.cpp
matching/zgrep/grep-3.8/: Makefile  Makefile.in  aclocal.m4  config.h  config.hin  config.status  configure
matching/zgrep/grep-3.8/doc/: Makefile  Makefile.in  grep.info  stamp-vti
matching/zgrep/grep-3.8/gnulib-tests/: Makefile  Makefile.in  gnulib.mk
matching/zgrep/grep-3.8/lib/: Makefile  Makefile.in  gnulib.mk
matching/zgrep/grep-3.8/m4/: gnulib-comp.m4
matching/zgrep/grep-3.8/po/: Makefile  Makefile.in  af.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  grep.pot  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  ky.po  lt.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  (+8 more)
matching/zgrep/grep-3.8/src/: grep.c  (+2 more)
matching/zgrep/gzip-1.12/: Makefile  config.status  gzip.c  gzip.h  version.c
preprocess/eraser/: vc  vc.cpp  vcdecoder.cc
preprocess/twins/: gzip1
preprocess/twins/zlib-1.2.11/: zlib.h
zearch/: Makefile
zearch/src/: count.h  main.c  memory.h
(+182 files in other folders)
